// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootRouter Should render correctly 1`] = `
<Suspense
  fallback={<div />}
>
  <Switch>
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/campaign-contents"
      render={[Function]}
    />
    <Route
      render={[Function]}
    />
  </Switch>
</Suspense>
`;

exports[`RootRouter redirectDashboardComponent should render correctly 1`] = `
<Redirect
  to="/"
/>
`;

exports[`RootRouter renderCampaignContentsComponent should render correctly 1`] = `
<UNDEFINED>
  <UNDEFINED
    dumValue="dumValue"
  />
</UNDEFINED>
`;

exports[`RootRouter renderDashboardComponent should render correctly 1`] = `
<UNDEFINED>
  <Dashboard
    dumValue="dumValue"
  />
</UNDEFINED>
`;
